<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hmc5883ldriver</name>
  <version>0.0.1</version>
  <description>ROS2 HMC5883l driver. Publishing /imu/mag topic</description>
  <maintainer email="thipok17@gmail.com">Thipok Jiamjarapan</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
